[package]
name = "cod_keeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.3"
inquire = { version = "0.6.2" }
log = "0.4.22"
prettytable-rs = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
strum = "0.25.0"
strum_macros = "0.25"
thiserror = "1.0.61"

[dev-dependencies]
pretty_assertions = "1.4.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
