[package]
name = "cod_keeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.3"
inquire = { version = "0.6.2" }
log = "0.4.22"
plotters = "0.3.6"
prettytable-rs = "0.10.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
strum = "0.25.0"
strum_macros = "0.25"
thiserror = "1.0.61"

tokio = { version = "1.38.0", features = ["full"] }
# tracing = "0.1"
tracing-log = "0.2.0"
tracing-core = "0.1.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
# opentelemetry = "0.21.0"
opentelemetry_sdk = { version = "0.21.2", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.14.0", features = ["metrics"] }
# opentelemetry-stdout = { version = "0.4.0", features = ["trace"] }
opentelemetry-semantic-conventions = "0.13.0"
# tracing-opentelemetry = "0.24.0"
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
# opentelemetry_sdk = "0.21"
opentelemetry-stdout = { version = "0.2.0", features = ["trace", "metrics"] }
tracing = "0.1"
tracing-opentelemetry = "0.22"
# tracing-subscriber = "0.3"

[dev-dependencies]
pretty_assertions = "1.4.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
